src/Cosette/tests/symbolic/passing/symbolic-trivial-3.js
var n = symb_number (n);
Assume ((n >= 0) and (n < 2000));
var y = 3 + 7 + n;
var z = y + 7;
Assert(z > 0);