src/Cosette/tests/symbolic/failing/ddispatch1.js
function foo () { 
	return "foo"
}

function baz () { 
	return "bazuca"
}

var n1 = symb_number (n1);
var z; 

if (n1 > 0) { 
	z = foo 
} else {
	z = baz 
}

var s = z (); 
Assert ((s-len s) <= 3)